// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot tests > CustomButton — базовый рендер 1`] = `
<button
  class="chakra-button css-3453h3"
  type="button"
>
  Нажми
</button>
`;

exports[`Snapshot tests > CustomButton — с isLoading 1`] = `
<button
  class="chakra-button css-3453h3"
  data-loading=""
  disabled=""
  type="button"
>
  <div
    class="chakra-button__spinner chakra-button__spinner--start css-1aamklj"
  >
    <div
      class="chakra-spinner css-1fc7edv"
    >
      <span
        class="css-8b45rq"
      >
        Loading...
      </span>
    </div>
  </div>
  <span
    class="css-q7lffx"
  >
    Загрузка
  </span>
</button>
`;

exports[`Snapshot tests > CustomInput — с счётчиком 1`] = `
<div
  class="chakra-input__group css-1y0e7gb"
  data-group="true"
>
  <input
    class="chakra-input css-343hk8"
    maxlength="70"
    value="Привет"
  />
  <div
    class="chakra-input__right-element css-17sd8sn"
  >
    <p
      class="chakra-text css-qazwmg"
    >
      6
      /
      70
    </p>
  </div>
</div>
`;

exports[`Snapshot tests > CustomTextArea — с счётчиком 1`] = `
<div
  class="chakra-input__group css-1y0e7gb"
  data-group="true"
>
  <textarea
    class="chakra-textarea css-1sjsctz"
    maxlength="100"
  >
    Тест
  </textarea>
  <div
    class="chakra-input__right-element css-17sd8sn"
  >
    <p
      class="chakra-text css-qazwmg"
    >
      4
      /
      100
    </p>
  </div>
</div>
`;

exports[`Snapshot tests > SpinnerLoader — базовый рендер 1`] = `
<div
  class="spinner-loader"
/>
`;
